@@ -1,7 +1,7 @@
 #
 #  This file is part of Bakefile (http://bakefile.sourceforge.net)
 #
-#  Copyright (C) 2003,2004 Vaclav Slavik
+#  Copyright (C) 2003-2006 Vaclav Slavik
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License version 2 as
@@ -21,27 +21,66 @@
 #  Keeping track of dependencies
 #
 
-import cPickle, os.path, time
+import cPickle, os.path, time, glob
 
-DEPS_FORMAT_VERSION = 4
+DEPS_FORMAT_VERSION = 5
 
 class DepsRecord:
+    """Record of dependencies of a group of output files generated by
+       one run of bakefile on its input files."""
     def __init__(self):
         self.deps = []
         self.outputs = [] # (filename,method) tuples
+
+class Dep:
+    """Entry in dependencies list (DepsRecord.deps)."""
+    def getFiles(self):
+        raise NotImplementedError
+    def getInitialFiles(self):
+        """Returns the list of files as it was when this object was created;
+           equals getFiles() at the time of creation, but may return different
+           values later e.g. for WildcardDep if the wildcard matches
+           more or less files than it did before."""
+        raise NotImplementedError
+
+class FileDep(Dep):
+    def __init__(self, filename):
+        self.filename = filename
+    def getFiles(self):
+        return [self.filename]
+    def getInitialFiles(self):
+        return self.getFiles()
+
+class WildcardDep(Dep):
+    def __init__(self, wildcard):
+        self.wildcard = wildcard
+        self.initialFilesList = self.getFiles()
+    def getFiles(self):
+        return glob.glob(self.wildcard)
+    def getInitialFiles(self):
+        return self.initialFilesList
 
 deps_db = {}
 modtimes_db = {}
 cmdlines_db = {}
 
-def addDependency(bakefile, format, dependency_file):
-    """Adds file 'dependency_file' as dependency of bakefile being
-       processed."""
-    if bakefile == dependency_file: return
+def __doAddDependency(bakefile, format, dep):
     key = (bakefile,format)
     if key not in deps_db:
         deps_db[key] = DepsRecord()
-    deps_db[key].deps.append(dependency_file)
+    deps_db[key].deps.append(dep)
+
+def addDependency(bakefile, format, dependency_file):
+    """Adds file 'dependency_file' as dependency of bakefile being
+       processed."""
+    if bakefile == dependency_file:
+        return
+    __doAddDependency(bakefile, format, FileDep(dependency_file))
+
+def addDependencyWildcard(bakefile, format, dependency_wildcard):
+    """Adds all files matching 'dependency_wildcard' as dependencies of
+       the bakefile being processed."""
+    __doAddDependency(bakefile, format, WildcardDep(dependency_wildcard))
 
 def addOutput(bakefile, format, output_file, output_method):
     """Adds file 'output_file' as output created by the bakefile being
@@ -122,13 +161,18 @@ def needsUpdate(bakefile, format, cmdline):
     if oldest_output < bakefile_time:
         return 1
 
-    for f in info.deps:
-        if not os.path.isfile(f):
-            # one of dependencies is missing, we must regen:
+    for dep in info.deps:
+        files = dep.getFiles()
+        if files != dep.getInitialFiles():
+            # wildcard dependency matches different files than before -> regen:
             return 1
-        if oldest_output < os.stat(f).st_mtime:
-            # one of used bakefiles is newer than generated files:
-            return 1
+        for f in files:
+            if not os.path.isfile(f):
+                # one of dependencies is missing, we must regen:
+                return 1
+            if oldest_output < os.stat(f).st_mtime:
+                # one of used bakefiles is newer than generated files:
+                return 1
 
     # this bakefile's output is up-to-date
     return 0
